--- a/app/views/questions/_edit.html.erb
+++ b/app/views/questions/_edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @question] do |f| %>
+<%= form_for @question do |f| %>
   <%= render "shared/error_messages", object: f.object %>
   <table class="table table-bordered">
     <tbody>
