--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,23 +1,8 @@
 <% provide :title, t("question.all_question") %>
 <h1><%= t "question.title" %></h1>
 
-<div class="form-horizontal">
-  <fieldset>
-    <%= search_form_for [:admin, @search] do |f| %>
-      <div class="form-group">
-        <div class="col-lg-3">
-          <%= f.text_field :content_eq, class: "form-control", placeholder: t("question.placeholder") %>
-        </div>
-        <div class="col-lg-1">
-          <%= f.submit t("search"), class: "btn btn-primary" %>
-        </div>
-      </div>
-    <% end %>
-  </fieldset>
-</div>
-
 <div class="form-control">
-  <%= link_to t("question.create"), new_admin_question_path %>
+  <%= link_to t("question.create"), new_question_path %>
 </div>
 <table class="table table-bordered">
   <thead>
@@ -27,7 +12,6 @@
     <th><%= t "question.category" %></th>
     <th><%= t "question.type" %></th>
     <th><%= t "question.status" %></th>
-    <th><%= t "question.accept" %></th>
     <th><%= t "question.answers" %></th>
     <th><%= t "question.action" %></th>
   </tr>
