task-49293-user-create-exam

--- a/app/views/exams/_exam.html.erb
+++ b/app/views/exams/_exam.html.erb
@@ -2,7 +2,9 @@
   <td><%= exam.created_at.strftime t("time") %></td>
   <td><%= exam.category.name %></td>
   <td><%= exam.status %></td>
+  <td><%= exam.duration %></td>
+  <td><%= exam.number_question %></td>
   <td><%= exam.spent_time %></td>
   <td><%= exam.mark %></td>
-  <td><%= link_to t("exam.start"), "#", class: "btn btn-primary" %></td>
+  <td><%= render "submit_action", exam: exam %></td>
 </tr>
