--- a/app/views/admin/exams/index.html.erb
+++ b/app/views/admin/exams/index.html.erb
@@ -1,19 +1,5 @@
-<div class="row">
-  <%= form_for @exam do |f| %>
-    <%= render "shared/error_messages", object: f.object %>
+<% provide :title, t("exam.admin.title") %>
 
-    <div class="col-md-3 col-md-offset-1">
-      <%= f.select :category_id,
-        options_from_collection_for_select(@category, "id", "name"),
-          {prompt: t("exam.select_category")}, class: "form-control" %>
-    </div>
-
-    <div class="col-md-2">
-      <%= f.submit t("exam.create"), class: "btn btn-success" %>
-    </div>
-  <% end %>
-</div>
-<br/>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <table class="table table-bordered">
@@ -25,7 +11,7 @@
         <th><%= t "exam.label.number_question" %></th>
         <th><%= t "exam.label.spent_time" %></th>
         <th><%= t "exam.label.mark" %></th>
-        <th></th>
+        <th><%= t "exam.label.action" %></th>
       </tr>
       <%= render @exams %>
     </table>
